vlib/v/checker/tests/assign_enum_at_comptime.vv
enum TestEnum {
	one = 1
}

struct TestStruct {
	test TestEnum
}

fn main() {
	mut t := TestStruct{}

	$for field in TestStruct.fields {
		t.$(field.name) = '1'
	}
}
